--- a/taskFlow.css
+++ b/taskFlow.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
+  /* background-image: linear-gradient(to right, rgb(95, 255, 151), rgb(95, 255, 253)); */
 }
 .header {
     background-color: grey;
@@ -9,17 +10,36 @@ body {
 }
 
 .area {
-    background-color: orange;
     width: 30%;
-    display: inline-flex;
-    padding: 0 10px 0 10px;
+    height: 500px;
+    -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+}
+.area-header {
+    text-align: center;
+    border-bottom: 1px solid rgba(50,50,50,0.5);
 }
 
 #main-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     width: 100%;
-    margin: 0;
+    margin: 0 0 10px 0;
     padding: 0;
 }
 
+#add-task-container {
+    padding: 10px 0 10px 0;
+    background-color: grey;
+    margin-bottom: 10px;
+}
+
+input[type="text"] {
+    font-size: 20px;
+}
+
+ul {
+    list-style-type: none;
+    font-size: 18px;
+}
