--- a/taskFlow.css
+++ b/taskFlow.css
@@ -1,8 +1,9 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Open Sans', sans-serif;
-    background-image: linear-gradient(to right, #11998e, #38ef7d); 
+    font-family: Helvetica Neue !important;
+    font-weight: 300;
+    color: #071E22;
 }
 
 .header {
@@ -10,21 +11,21 @@ body {
       border-bottom: 1px solid rgb(50,50,50);
       width: 100%;
       height: 60px;
-      margin-bottom: 30px;
-      background-color: white;
-      
+      margin-bottom: 20px;
+      background-color: rgb(47,49,58);
 }
 
 h1 {
       margin:0;
       padding:0px 20px 0px 20px;
       display: inline-flex;
+      color: rgb(25,126,185);
 }
 
 input[type="text"] {
-      font-size: 16px;
+      font-size: 17px;
       width: 250px;
-      padding: 0;
+      padding: 10px;
       height: 35px;
       display: inline-flex;
       margin-left: 50px;
@@ -33,7 +34,7 @@ input[type="text"] {
 .area {
       width: 30%;
       height: 500px;
-      background-color: white;
+      background-color: rgba(250,250,250);
       -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.50);
       -moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.50);
       box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.50);
@@ -97,5 +98,22 @@ span {
       display: inline-block;
       transition: 0.2s linear;
       opacity: 0;
-  
+}
+/* Progress Bar */
+
+#progress-container {
+      width: 80%;
+      background-color: white;
+      margin: 0 auto;
+      margin-bottom: 20px;
+}
+
+#progress-bar {
+      width: 0%;
+      height: 30px;
+      background-color: rgb(30,144,255);
+      transition: 1s;
+      color: white;
+      line-height: 30px;
+      text-align: center;
 }
