--- a/taskFlow.css
+++ b/taskFlow.css
@@ -1,34 +1,41 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Helvetica Neue !important;
-    font-weight: 300;
     color: #071E22;
 }
+* {
+    font-family: Helvetica Neue;
+    font-weight: 300;
+} 
 
 .header {
-      justify-content: flex-start;
-      border-bottom: 1px solid rgb(50,50,50);
-      width: 100%;
       height: 60px;
-      margin-bottom: 20px;
+      line-height: 60px;
+      width: 100%;
       background-color: rgb(47,49,58);
+      margin-bottom: 20px; 
 }
 
 h1 {
-      margin:0;
-      padding:0px 20px 0px 20px;
-      display: inline-flex;
+      display: inline-block;
+      vertical-align: middle;
       color: rgb(25,126,185);
+      line-height: normal;
+      margin: 0;
+      left: 5%;
+      position: relative;
 }
 
 input[type="text"] {
-      font-size: 17px;
+      display: inline-block;
+      vertical-align: middle;
+      line-height: normal;
+      margin: 0;
       width: 250px;
-      padding: 10px;
       height: 35px;
-      display: inline-flex;
-      margin-left: 50px;
+      font-size: 18px;
+      position: relative;
+      left: 10%;
 }
 
 .area {
@@ -38,6 +45,7 @@ input[type="text"] {
       -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.50);
       -moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.50);
       box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.50);
+      overflow: scroll;
 }
 
 .area-header {
@@ -111,7 +119,7 @@ span {
 #progress-bar {
       width: 0%;
       height: 30px;
-      background-color: rgb(30,144,255);
+      background-color: rgb(25,126,185);
       transition: 1s;
       color: white;
       line-height: 30px;
